# copykat_python

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
copykat/: __init__.py  _data.py  _download.py  _registry.py  annotate.py  baseline.py  bins.py  copykat.py  heatmap.py  segmentation.py  smoothing.py
copykat/resources/: DNA_hg20.parquet  cyclegenes.parquet  full_anno_hg38.parquet  full_anno_mm10.parquet
docs/: api.md  index.md
docs/tutorials/: copycat-vignettes.ipynb
tests/: conftest.py  test_annotate.py  test_baseline.py  test_copykat.py  test_data.py  test_heatmap.py  test_segmentation.py  test_smoothing.py
tutorials/: copycat-vignettes.ipynb
